# temporal-stream-log

./: .gitignore  CMakeLists.txt  PLAN.md
include/: Definitions.h  LogBuffer.h  LogEntry.h  LogFormatter.h  LogWriter.h
src/: LogBuffer.cpp  LogEntry.cpp  LogFormatter.cpp  LogWriter.cpp  main.cpp
